--- a/code/237_AS1_trends.Rmd
+++ b/code/237_AS1_trends.Rmd
@@ -22,8 +22,9 @@ Make sure you cite your data source in your final report.
 
 
 ### 3. Assess whether climate at your location has been changing with trend analysis
-- using 2 different metrics for averages
-- using 2 different metrics for extremes
+
+### using 2 different metrics for averages
+
 Refer to your answer for part 1 when choosing your metrics; why are these metrics likely to
 be relevant, given the climate change impacts you expect at this location?
 
