--- a/code/237_AS1_trends.Rmd
+++ b/code/237_AS1_trends.Rmd
@@ -10,11 +10,14 @@ knitr::opts_chunk$set(echo = TRUE)
 
 library(here)
 library(tidyverse)
+library(janitor)
 
 ```
 
 ```{r}
-barrow_ak <- read_csv(here("data", "barrow_ak.csv"))
+barrow <- read_csv(here("data", "barrow_ak.csv")) %>% 
+  clean_names() %>% 
+  select(-station, -name, -starts_with("wt"))
 ```
 
 
