--- a/code/237_AS1_trends.Rmd
+++ b/code/237_AS1_trends.Rmd
@@ -25,24 +25,33 @@ barrow <- read_csv(here("data", "barrow_ak.csv")) %>%
  What is it like? Urban/rural, polar/tropical, forest/desert, etc.
  What climate impacts might be important there?
  
- 
-### 2. Download historical climate data for your site (note: make sure you download both
-precipitation and temperature!)
-You may use any data source you like, either using sources we discussed in class, your
-favorite data repository, or somewhere else.
-Make sure you cite your data source in your final report.
-
-
 ### 3. Assess whether climate at your location has been changing with trend analysis
 
-### using 2 different metrics for averages
+### AVERAGES
+
+```{r}
+
+```
+
 
 Refer to your answer for part 1 when choosing your metrics; why are these metrics likely to
 be relevant, given the climate change impacts you expect at this location?
 
-### Also be creative in your analysis: use some good old T, rank-sum, or other statistical tests,
-and make sure to plot your results!
+#### T, rank-sum, or other statistical tests
 
+```{r}
 
-You may work either individually or in groups of 2-3; then summarize the results in a two-page
-report including an introduction, figures/tables, and discussion.
+```
+
+### EXTREMES
+
+```{r}
+
+```
+
+Refer to your answer for part 1 when choosing your metrics; why are these metrics likely to
+be relevant, given the climate change impacts you expect at this location?
+
+#### T, rank-sum, or other statistical tests
+
+### DISCUSSION
