--- a/code/237_AS1_trends.Rmd
+++ b/code/237_AS1_trends.Rmd
@@ -12,7 +12,7 @@ output:
 
 # Overview {.tabset .tabset-pills}
 
-Seattle is the largest city in Washington State. Situated between the Puget Sound and Lake Washington, Seattle is a largely urban area that is home to nearly 730,000 people. Known for its mild weather and persistent rain, Seattle's climate is temperate, which until recently has meant that it has avoided extreme temperature events, has abundant fresh water, and is famous for its lush green foliage. However, June of 2021 saw many of the hottest days in Seattle's history. Moreover, wildfires have become increasingly common in over the past decade. Together, these troubling trends raise questions about how Seattle's climate is changing and what adaptation measures should be implemented to adapt to these changes. The following report analyzes climate trends in Seattle using daily climate data from the National Climatic Data Center (NCDC). First, average climate variables relating to temperature and precipitation are explored to discover how Seattle's climate has changed from 1949 until today. Then, frequency and severity of climate extremes are examined.
+Seattle is the largest city in Washington State. Situated between the Puget Sound and Lake Washington, it is a largely urban area that is home to nearly 730,000 people. Known for its mild weather and persistent rain, Seattle's climate is temperate, which until recently has meant that it has avoided extreme temperature events, has abundant fresh water, and is famous for its lush green foliage. However, June of 2021 saw many of the hottest days in Seattle's history. Moreover, wildfires have become increasingly common in over the past decade. Together, these troubling trends raise questions about how Seattle's climate is changing and what adaptation measures should be implemented to adapt to these changes. The following report analyzes climate trends in Seattle using daily climate data from the National Climatic Data Center (NCDC). First, average climate variables relating to temperature and precipitation are explored to discover how Seattle's climate has changed from 1949 until today. Then, frequency and severity of climate extremes are examined.
  
 ## Setup
 
@@ -54,7 +54,7 @@ seattle <- read_csv(here("data", "seattle.csv")) %>%
 seattle_ts <- seattle %>% 
   as_tsibble(key = NULL, index = date) 
 
-# monthly 
+# monthly summary statistics
 seattle_monthly <- seattle_ts %>% 
   index_by(year_month = ~yearmonth(.)) %>% 
   summarize(mean_daily_max_temp = mean(tmax, na.rm = TRUE), 
@@ -65,7 +65,7 @@ seattle_monthly <- seattle_ts %>%
             monthly_precip = sum(prcp, na.rm = TRUE)) %>% 
   mutate(year = year(year_month))
 
-# yearly
+# yearly summary statistics
 seattle_yearly <- seattle_ts %>% 
   index_by(year) %>% 
   summarize(mean_daily_max_temp = mean(tmax, na.rm = TRUE), 
@@ -88,7 +88,7 @@ ggplot(data = seattle_yearly) +
               color = "gray25", 
               aes(x = year, 
                   y = mean_daily_max_temp)) +
-  geom_smooth(method = "lm", 
+  geom_smooth(method = "lm",
               color = "gray25", 
               aes(x = year, 
                   y = mean_daily_min_temp)) +
@@ -104,7 +104,9 @@ geom_point(aes(x = year,
   theme_minimal(14) +
   theme(legend.position = "none") +
   labs(x = element_blank(), 
-       y = "Average Daily Temperature (F)")
+       y = "Average Daily Temperature (F)") +
+  geom_text(x = 2010, y = 57, label = "Daily Max", color = "firebrick", size = 7) +
+  geom_text(x = 2010, y = 43, label = "Daily Min", color = "deepskyblue4", size = 7)
 ```
 
 **Figure 1** shows Seattle's average daily maximum temperature (red) and average daily minimum temperature (blue) by year. Trendline was fitted using simple linear regression. Grey shading represents the bounds of a 95% confidence interval. 
@@ -177,7 +179,7 @@ names_vector <- c("Average Maximum Daily Temperature (F)", "Average Minimum Dail
 lm_tidy_all_clean <- data.frame(names_vector, lm_tidy_all_coef)
 
 
-# Mann Kendall
+# Mann Kendall testing for significance
 mk1 <- MannKendall(seattle_yearly$mean_daily_max_temp)
 mkt1 <- mk1$sl
 mk2 <- MannKendall(seattle_yearly$mean_daily_min_temp)
@@ -197,12 +199,15 @@ kable(stats_table,
   kable_minimal(full_width = FALSE)
 ```
 
+
+
 #### Conclusions
 -  Average daily maximum temperature is increasing on average by 0.04 degrees F per year, and this trend was determined to be significant (p < 0.001).
 -  Average daily minimum temperature is also increasing, on average by 0.05 degrees F, and this trend was determined to be significant (p < 0.001).
 -  Thus temperatures both maximum and minimum daily average temperatures are increasing in the Seattle area. 
 -  There is not a significant trend in either monthly and annual precipitation, indicating that precipitation levels are not changing over time in Seattle. 
 
+$$\\[.5in]$$
 
 ## Climate Extremes (Max)
 
@@ -215,4 +220,4 @@ be relevant, given the climate change impacts you expect at this location?
 
 
 
-## DISCUSSION (Max)
+## Discussion (Max)
