--- a/code/237_AS1_trends.Rmd
+++ b/code/237_AS1_trends.Rmd
@@ -209,8 +209,30 @@ kable(stats_table,
 
 $$\\[.5in]$$
 
-## Climate Extremes (Max)
+## Climate Extremes
 
+```{r}
+# hottest day of the year 1949-2021
+seattle_hottest_days <- seattle_ts %>% 
+  index_by(year) %>% 
+  summarize(hottest_day = max(tmax)) %>% 
+  filter(year != "2022") %>% 
+  filter(year != "1948")
+
+# days above 85 1949-2021
+seattle_hot_days <- seattle_ts %>% 
+  index_by(year) %>% 
+  summarize(days_above_85 = sum(ifelse(tmax >= 90, 1, 0))) %>% 
+  filter(year != "2022") %>% 
+  filter(year != "1948")
+
+# days below freezing 1949-2021
+seattle_below_freezing <- seattle_ts %>% 
+  index_by(year) %>% 
+  summarize(days_below_freezing = sum(ifelse(tmin <= 32, 1, 0))) %>% 
+  filter(year != "2022") %>% 
+  filter(year != "1948")
+```
 
 
 Refer to your answer for part 1 when choosing your metrics; why are these metrics likely to
@@ -220,4 +242,4 @@ be relevant, given the climate change impacts you expect at this location?
 
 
 
-## Discussion (Max)
+## Discussion
