--- a/code/237_AS1_trends.Rmd
+++ b/code/237_AS1_trends.Rmd
@@ -212,6 +212,10 @@ $$\\[.5in]$$
 ## Climate Extremes
 
 ```{r}
+# Data wrangling
+
+# Temperature
+
 # hottest day of the year 1949-2021
 seattle_hottest_days <- seattle_ts %>% 
   index_by(year) %>% 
@@ -219,7 +223,7 @@ seattle_hottest_days <- seattle_ts %>%
   filter(year != "2022") %>% 
   filter(year != "1948")
 
-# days above 85 1949-2021
+# days above 85 and days below freezing 1949-2021
 seattle_hot_days <- seattle_ts %>% 
   index_by(year) %>% 
   summarize(days_above_85 = sum(ifelse(tmax >= 90, 1, 0))) %>% 
@@ -235,7 +239,9 @@ seattle_below_freezing <- seattle_ts %>%
 ```
 
 ```{r}
-# precip extremes
+# Data wrangling
+
+# precipitation extremes
 
 # days with over an inch of precipitation
 seattle_wet_days <- seattle_ts %>% 
@@ -252,6 +258,64 @@ seattle_dry_days <- seattle_ts %>%
   filter(year != "1948")
 
 ```
+
+### Temperature Extremes
+
+```{r}
+# plotting hottest day of the year 1949-2021
+ggplot(data = seattle_hottest_days) +
+  geom_smooth(method = "lm", 
+              color = "gray25", 
+              aes(x = year, 
+                  y = hottest_day)) +
+geom_point(aes(x = year, 
+               y = hottest_day, 
+               color = hottest_day), 
+           size = 2) +
+  scale_color_gradientn(colors = c("firebrick")) +
+  theme_minimal(14) +
+  theme(legend.position = "none") +
+  labs(x = element_blank(), 
+       y = "Hottest Day of the Year (F)")
+
+# plotting number of days over 85 
+
+ggplot(data = seattle_hot_days) +
+  geom_smooth(method = "lm", 
+              color = "gray25", 
+              aes(x = year, 
+                  y = days_above_85)) +
+geom_point(aes(x = year, 
+               y = days_above_85, 
+               color = days_above_85), 
+           size = 2) +
+  scale_color_gradientn(colors = c("firebrick")) +
+  theme_minimal(14) +
+  theme(legend.position = "none") +
+  labs(x = element_blank(), 
+       y = "Number of Days Over 85 Degrees (F)")
+
+# plotting number of days below freezing
+
+ggplot(data = seattle_below_freezing) +
+  geom_smooth(method = "lm", 
+              color = "gray25", 
+              aes(x = year, 
+                  y = days_below_freezing)) +
+geom_point(aes(x = year, 
+               y = days_below_freezing, 
+               color = days_below_freezing), 
+           size = 2) +
+  scale_color_gradientn(colors = c("deepskyblue4")) +
+  theme_minimal(14) +
+  theme(legend.position = "none") +
+  labs(x = element_blank(), 
+       y = "Number of Nights Below Freezing")
+```
+
+
+### Precipitation Extremes
+
 
 
 Refer to your answer for part 1 when choosing your metrics; why are these metrics likely to
