--- a/code/237_AS1_trends.Rmd
+++ b/code/237_AS1_trends.Rmd
@@ -261,7 +261,7 @@ seattle_dry_days <- seattle_ts %>%
 
 ### Temperature Extremes
 
-```{r}
+```{r, include=false}
 # plotting hottest day of the year 1949-2021
 ggplot(data = seattle_hottest_days) +
   geom_smooth(method = "lm", 
@@ -277,7 +277,8 @@ geom_point(aes(x = year,
   theme(legend.position = "none") +
   labs(x = element_blank(), 
        y = "Hottest Day of the Year (F)")
-
+```
+```{r}
 # plotting number of days over 85 
 
 ggplot(data = seattle_hot_days) +
@@ -295,6 +296,10 @@ geom_point(aes(x = year,
   labs(x = element_blank(), 
        y = "Number of Days Over 85 Degrees (F)")
 
+```
+**Figure 5** displays the number of days per year in Seattle where the daily maximum temperature exceeded 85 degrees Fahrenehit. The trendline was fitted using simple linear regression. Grey shading represents the bounds of a 95% confidence interval.
+
+```{r}
 # plotting number of days below freezing
 
 ggplot(data = seattle_below_freezing) +
@@ -312,7 +317,7 @@ geom_point(aes(x = year,
   labs(x = element_blank(), 
        y = "Number of Nights Below Freezing")
 ```
-
+**Figure 6** shows the number of days per year in Seattle where the minimum daily temperature dropped below freezing. The trendline was fitted using simple linear regression. Grey shading represents the bounds of a 95% confidence interval.
 
 ### Precipitation Extremes
 
@@ -330,7 +335,10 @@ ggplot(data = seattle_wet_days) +
   theme(legend.position = "none") +
   labs(x = element_blank(), 
        y = "Number of Days with over 1 Inch of Precipitation")
+```
+**Figure 7** shows the number of wet days in Seattle per year, determined by days with at least 1 inch of precipitation. The trendline was fitted using simple linear regression. Grey shading represents the bounds of a 95% confidence interval.
 
+```{r}
 ggplot(data = seattle_dry_days) +
   geom_smooth(method = "lm", 
               color = "gray25", 
@@ -345,7 +353,7 @@ ggplot(data = seattle_dry_days) +
   labs(x = element_blank(), 
        y = "Number of Days with No Precipitation")
 ```
-
+**Figure 8** shows the number of dry days in Seattle per year, respresented by days where there was no measured precipitation. The trendline was fitted using simple linear regression. Grey shading represents the bounds of a 95% confidence interval.
 
 Refer to your answer for part 1 when choosing your metrics; why are these metrics likely to
 be relevant, given the climate change impacts you expect at this location?
